FEE-1572: Fixed date range component width FEE-1572: Added btn-default to spinner increment and decrement buttons FEE-1573: Fixed date picker example page FEE-1574: Fixed missing input styles for date picker FEE-1574: Fixed incorrect spinner width FEE-1571: Fixed erroneous max-width:125% rule on dropdown-menus FEE-1578: Fixed blue border around treeview popover contents FEE-1575: Fixed spacing on time picker when meridian isnt shown FEE-1579: Fixed disabled pagination arrow styles FEE-1588: Fixed disabled switch cursor styles FEE-1584: Fixed menu button disabled cursor styles FEE-1588: Fixed switch button line height in forms FEE-1498: Fixed invalid state for switch button, spinner, and time picker FEE-1574: Fixed an issue with time picker open state FEE-1584: Fixed disabled cursor on dropdown items FEE-1591: Fixed radio and checkbox inline left paddings FEE-1498: Fixed spinner validation FEE-1498: Added form validation to date range

--- a/src/date-picker/_date-picker.scss
+++ b/src/date-picker/_date-picker.scss
@@ -3,55 +3,6 @@
 .akam-date-picker {
   position: relative;
 
-  input[type="text"] {
-    -webkit-appearance: textfield;
-    outline: 0;
-    background-color: $input-background-color;
-    border-color: $input-border-color;
-    padding-right: #{$input-border-radius * 2};
-    @include box-shadow($input-box-shadow);
-
-    & ~ .btn {
-      min-width: 0;
-      margin-left: -#{$input-border-radius * 2};
-      @include border-left-radius(0);
-      i {
-        @include disable-magic-sprite-selectors(calendar);
-      }
-
-    }
-
-    &:disabled ~ .btn {
-      background: $button-background-color-disabled;
-      border-color: $button-border-color-disabled;
-      color: $button-text-color-disabled;
-      cursor: default;
-
-      i {
-        opacity: $input-button-icon-opacity-disabled;
-      }
-    }
-
-    &.ng-invalid.ng-touched ~ .btn {
-      border-left-color: $border-color-invalid;
-    }
-
-    // Reset date picker focus state to look like its default state
-    &:focus {
-      border-color: $input-border-color;
-      background-color: $input-background-color;
-      @include box-shadow($input-box-shadow);
-    }
-
-    &:disabled {
-      color: $datepicker-text-color-disabled;
-      border-color: $input-border-color-disabled;
-      background-color: $input-background-color-disabled;
-      @include placeholder-enhanced($datepicker-text-color-disabled, italic);
-      @include box-shadow(none);
-    }
-  }
-
   .clear-date {
     margin-top: 6px;
     position: absolute;
@@ -64,36 +15,13 @@
     }
   }
 
-  &.opened {
-    input {
-      border: 1px solid $input-border-color-focus;
-      background-color: white;
-      @include box-shadow(none);
-    }
-
-    input ~ .btn {
-      border-color: #999999;
-      border-left-color: $input-border-color-focus;
-      @include background-image(linear-gradient($button-gradient-bottom-hover, $button-gradient-top-hover));
-    }
-    .clear-date {
-      opacity: .333;
-    }
-  }
-
   // Date Picker Popup is done via drop down menu item
   ul.dropdown-menu {
     padding: $datepicker-padding;
     outline: none;
-    border: 1px solid #ccc;
-    border-radius: $border-radius;
-    margin-top: 0;
-    top: 100%;
-    overflow-x: inherit;
     min-width: (($datepicker-cell-size + 1) * 7) + ($datepicker-padding * 2) + 2;
     @include box-shadow($global-box-shadow);
-    overflow: inherit;
-
+    
     // Override TWBS
     .btn {
       min-width: 0;
@@ -268,6 +196,38 @@
           line-height: 2.14;
         }
       }
+    }
+  }
+}
+
+akam-date-picker {
+  
+  input[type="text"] {
+    @extend %inputStyles;
+    
+    &:focus {
+      @extend %inputFocusStyles;
+    }
+    
+    &:disabled {
+      @extend %inputDisabledStyles;
+    }
+  }
+  
+  
+  &.opened {
+    input[type="text"] {
+      @extend %inputFocusStyles;
+    }
+  
+    input[type="text"] ~ .input-group-btn > .btn {
+      border-color: #999999;
+      border-left-color: $input-border-color-focus;
+      @include background-image(linear-gradient($button-gradient-bottom-hover, $button-gradient-top-hover));
+    }
+    
+    .clear-date {
+      opacity: .333;
     }
   }
 }
