--- a/src/global-styles/theme/_checkboxes.scss
+++ b/src/global-styles/theme/_checkboxes.scss
@@ -75,3 +75,6 @@ input[type="checkbox"] {
   
 }
 
+.checkbox-inline {
+  padding-left: 0px;
+}
